Fixed contrast ratio issue for --text-secondary

--- a/src/variables/shared.css
+++ b/src/variables/shared.css
@@ -17,7 +17,7 @@
   --layer-background-color: white;
   --layer-border-color: var(--border-color);
   --divider-bg-color: var(--gray-200);
-  --text-secondary: hsl(221, 24%, 46%);
+  --text-secondary: hsl(221, 24%, 54%);
   --border-gray: var(--gray-200);
   --border-gray-dark: var(--gray-300);
   --body-text-color: var(--gray-800);
